CHANGES TO REMIND

* Version 3.0 Patch 20

+ MINOR ENHANCEMENTS

- Made TkRemind adjust for really low-resolution displays if necessary.

- Added Spanish language support, courtesy of Rafa Couto.

+ BUG FIXES

- Rem2PS was passing specials like HTML, etc. in PostScript output.
  YECH!  Fix courtesty of Derek J. Decker.

* Version 3.0 Patch 19

+ MAJOR ENHANCEMENTS

- Added MOON and SHADE specials.  These now work with PostScript,
  HTML and Tcl/Tk front-ends.  You can have cute moons and shaded
  boxes on your printer, on your screen and in your web browser. :-)

- TkRemind overhauled -- you can now edit and delete reminders from
  the GUI.  You can actually reasonably use Remind without learning
  the scripting language.

- TkRemind overhauled -- "server mode" added to Remind; TkRemind will
  now pop up timed reminders.

+ MINOR ENHANCEMENTS

- Updated romanian.h, courtesy Liviu Daia.

+ BUG FIXES

- Allowed object files to be built in different directory from
  source files (thanks to Jonathan Kamens <jik@American.COM>

- Removed restriction against reading group-writable files.  This
  caused headaches on Red Hat Linux which uses an unusual user/group
  scheme.

- Remind would not compile if a non-English language was selected.

- Fixed free() of a NULL pointer.

- Made tkremind display a helpful error message if Remind's
  "security feature" of not reading a group-writable file kicks
  in.

- Fixed bug which sometimes prevented reminder times from appearing
  in a calendar display.

- Lots more silly little bugs squashed -- too many to go into in
  detail.

* Version 3.0 Patch 18

+ MAJOR ENHANCEMENTS

- Added the script "build.tk" which makes it trivial to compile
  and install Remind under UNIX -- no need to edit Makefiles or
  header files.  A nice GUI installation dialog!

- Got rid of all fixed-size buffers.  Hurray!  Everything is dynamic --
  no built-in limits on line length, token size, etc.  This should
  cure lots of SEGV's for weird files.
