@@ -11,7 +11,7 @@
 #
 #--------------------------------------------------------------
 
-# $Id: tkremind,v 1.22 1998-07-07 02:55:58 dfs Exp $
+# $Id: tkremind,v 1.23 1998-11-24 18:19:22 dfs Exp $
 
 # the next line restarts using wish \
 exec wish "$0" "$@"
@@ -99,11 +99,15 @@ set SkipType 1
 set CommandLine {}
 set PSCmd {}
 
-# Print options -- destination file; letter-size; landscape; fill page
+# Print options -- destination file; letter-size; landscape; fill page; default
+# encoding; 36pt margins; print small calendars
 set PrintDest file
 set PrintSize letter
 set PrintOrient landscape
 set PrintFill 1
+set PrintEncoding 0
+set PrintMargins 36pt
+set PrintSmallCalendars 1
 
 # Highest tag seen so far.  Array of tags is stored in ReminderTags()
 set HighestTagSoFar 0
@@ -702,7 +706,7 @@ proc Status { stuff } {
 #   None
 #---------------------------------------------------------------------------
 proc DoPrint {} {
-    global PrintDest PrintSize PrintOrient PrintFill PrintStatus Rem2PS PSCmd
+    global PrintDest PrintSize PrintMargins PrintOrient PrintFill PrintEncoding PrintSmallCalendars PrintStatus Rem2PS PSCmd
     global CurMonth CurYear MonthNames
     catch {destroy .p}
     toplevel .p
@@ -712,7 +716,9 @@ proc DoPrint {} {
     frame .p.f11
     frame .p.f12
     frame .p.f2 -relief sunken -border 2
+    frame .p.f2a -relief sunken -border 2
     frame .p.f3 -relief sunken -border 2
+    frame .p.f3a -relief sunken -border 2
     frame .p.f4
 
     radiobutton .p.tofile -text "To file: " -variable PrintDest -value file
@@ -726,22 +732,32 @@ proc DoPrint {} {
     radiobutton .p.letter -text "Letter" -variable PrintSize -value letter
     radiobutton .p.a4 -text "A4" -variable PrintSize -value a4
 
+    label .p.margin -text "Margins:"
+    radiobutton .p.24pt -text "24pt margins" -variable PrintMargins -value 24pt
+    radiobutton .p.36pt -text "36pt margins" -variable PrintMargins -value 36pt
+    radiobutton .p.48pt -text "48pt margins" -variable PrintMargins -value 48pt
+
     label .p.orient -text "Orientation:"
     radiobutton .p.landscape -text "Landscape" -variable PrintOrient -value landscape
     radiobutton .p.portrait -text "Portrait" -variable PrintOrient -value portrait
 
     checkbutton .p.fill -text "Fill page" -variable PrintFill
+    checkbutton .p.encoding -text "ISO 8859-1 PostScript encoding" -variable PrintEncoding
+    checkbutton .p.calendars -text "Print small calendars" -variable PrintSmallCalendars
 
     button .p.print -text "Print" -command {set PrintStatus print}
     button .p.cancel -text "Cancel" -command {set PrintStatus cancel}
 
-    pack .p.f1 .p.f2 .p.f3  -side top -fill both -expand 1 -anchor w
-    pack .p.fill -side top -anchor w -fill none -expand 0
+    pack .p.f1 .p.f2 .p.f2a .p.f3 .p.f3a \
+	    -side top -fill both -expand 1 -anchor w
+    pack .p.fill .p.encoding .p.calendars -in .p.f3a \
+	    -side top -anchor w -fill none -expand 0
     pack .p.f4 -side top -fill both -expand 1 -anchor w
     pack .p.f11 .p.f12 -in .p.f1 -side top -fill none -expand 0 -anchor w
     pack .p.tofile .p.filename .p.browse -in .p.f11 -side left -fill none -expand 0 -anchor w
     pack .p.tocmd .p.command -in .p.f12 -side left -fill none -expand 0 -anchor w
     pack .p.size .p.letter .p.a4 -in .p.f2 -side top -fill none -expand 0 -anchor w
+    pack .p.margin .p.24pt .p.36pt .p.48pt -in .p.f2a -side top -anchor w -fill none -expand 0
     pack .p.orient .p.landscape .p.portrait -in .p.f3 -side top -fill none -expand 0 -anchor w
     pack .p.print .p.cancel -in .p.f4 -side left -fill none -expand 0
 
@@ -782,11 +798,19 @@ proc DoPrint {} {
     }
 
     # Build the command line
-    set cmd "$PSCmd 1 [lindex $MonthNames $CurMonth] $CurYear | $Rem2PS -c3"
+    set cmd "$PSCmd 1 [lindex $MonthNames $CurMonth] $CurYear | $Rem2PS"
     if {$PrintSize == "letter"} {
 	append cmd " -m Letter"
     } else {
 	append cmd " -m A4"
+    }
+
+    if {$PrintMargins == "24pt"} {
+        append cmd " -or 24 -ol 24 -ot 24 -ob 24"
+    } elseif {$PrintMargins == "36pt"} {
+        append cmd " -or 36 -ol 36 -ot 36 -ob 36"
+    } else {
+        append cmd " -or 48 -ol 48 -ot 48 -ob 48"
     }
 
     if {$PrintOrient == "landscape"} {
@@ -795,6 +819,16 @@ proc DoPrint {} {
 
     if {$PrintFill} {
 	append cmd " -e"
+    }
+
+    if {$PrintEncoding} {
+        append cmd " -i"
+    }
+
+    if {$PrintSmallCalendars} {
+        append cmd " -c3"
+    } else {
+        append cmd " -c0"
     }
 
     append cmd " $fname"
