@@ -10,7 +10,7 @@
 /*                                                             */
 /***************************************************************/
 
-/* $Id: custom.h,v 1.16 1998-07-18 03:16:37 dfs Exp $ */
+/* $Id: custom.h,v 1.17 1998-11-24 18:19:26 dfs Exp $ */
 
 /*---------------------------------------------------------------------*/
 /* LAT_DEG, LAT_MIN and LAT_SEC: Latitude of your location             */
